# qbot

./: .gitignore  Cargo.toml  LICENSE  README.md  config.json  config.yaml
.github/workflows/: release.yml
examples/: test_cmd.rs
src/: command.rs  config.rs  gpt.rs  history.rs  lib.rs  main.rs  private_manager.rs  qbot.rs  qbot_cmd.rs  role.rs
src/chat/: gpt.rs  manager.rs  message.rs  mod.rs  model.rs  role.rs  session.rs
src/cqbot/: bot.rs  mod.rs  msg.rs
src/cqbot/msg/: mod.rs  post_message.rs  post_meta_event.rs  post_notice.rs  post_request.rs  send_msg.rs
