[package]
name = "qbot"
version = "0.1.0"
edition = "2021"
authors = ["eluvk.dev@gmail.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = "0.18.0"
tokio = { version = "1.26.0", features = ["full"] }
url = "2.3.1"
futures-util = "0.3.26"
serde_json = "1.0.94"
serde = { version = "1.0.154", features = ["derive"] }
regex = "1.7.1"
lazy_static = "1.4.0"
thiserror = "1.0.39"
reqwest = { version = "0.11.14", features = ["socks"] }
clap = { version = "4.1.8", features = ["derive"] }

[dev-dependencies]
tokio-test = "0.4.2"
